# scanbom

./: Cargo.toml  LICENSE  README.md  input.json  sbom.json
.github/workflows/: release.yaml  rust.yml
src/: main.rs  npm.rs  scan.rs
